force-app/main/default/objects/Contact/fields/Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Contact Record ID</label>
    <type>Text</type>
</CustomField>