force-app/main/default/objects/Contact/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code for the mobile phone number</description>
    <inlineHelpText>Country code of the Mobile number</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>