force-app/main/default/objects/Contact/fields/Country_HS__c.field-meta.xml
<CustomField>
    <fullName>Country_HS__c</fullName>
    <label>Country</label>
    <length>225</length>
    <type>Text</type>
</CustomField>