force-app/main/default/objects/Contact/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <formula>Primary_Academic_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course</label>
    <type>Text</type>
</CustomField>