force-app/main/default/objects/Contact/fields/Date_of_Admission_in_Institute__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Admission_in_Institute__c</fullName>
    <label>Date of Admission in Institute</label>
    <type>Date</type>
</CustomField>