force-app/main/default/objects/Contact/fields/Date_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Approval__c</fullName>
    <label>Date of Approval</label>
    <type>Date</type>
</CustomField>