force-app/main/default/objects/Contact/fields/Defence_Ex_Serviceman__c.field-meta.xml
<CustomField>
    <fullName>Defence_Ex_Serviceman__c</fullName>
    <label>Defence / Ex-Serviceman</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>