force-app/main/default/objects/Contact/fields/Designation_SU__c.field-meta.xml
<CustomField>
    <fullName>Designation_SU__c</fullName>
    <label>Designation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>