force-app/main/default/objects/Contact/fields/Detained_Semester__c.field-meta.xml
<CustomField>
    <fullName>Detained_Semester__c</fullName>
    <label>Detained Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem-1</fullName>
            </value>
            <value>
                <fullName>Sem-2</fullName>
            </value>
            <value>
                <fullName>Sem-3</fullName>
            </value>
            <value>
                <fullName>Sem-4</fullName>
            </value>
            <value>
                <fullName>Sem-5</fullName>
            </value>
            <value>
                <fullName>Sem-6</fullName>
            </value>
            <value>
                <fullName>Sem-7</fullName>
            </value>
            <value>
                <fullName>Sem-8</fullName>
            </value>
            <value>
                <fullName>Sem-9</fullName>
            </value>
            <value>
                <fullName>Sem-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>