force-app/main/default/objects/Contact/fields/Digital_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Digital_Card_Number__c</fullName>
    <displayFormat>DG-{0000000000}</displayFormat>
    <label>Digital Card Number</label>
    <type>AutoNumber</type>
</CustomField>