force-app/main/default/objects/Contact/fields/Display_Detained_Fields__c.field-meta.xml
<CustomField>
    <fullName>Display_Detained_Fields__c</fullName>
    <formula>OR(
    ISPICKVAL(Student_Status__c, &quot;Detained&quot;),
    ISPICKVAL(Student_Status__c, &quot;Not Reported&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Detained Fields</label>
    <type>Checkbox</type>
</CustomField>