force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Agar Malwa</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Alipurduar</fullName>
            </value>
            <value>
                <fullName>Alirajpur</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Alluri Sitharama Raju</fullName>
            </value>
            <value>
                <fullName>Almora</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Ambedkar Nagar</fullName>
            </value>
            <value>
                <fullName>Amethi</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amreli</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Amroha</fullName>
            </value>
            <value>
                <fullName>Amroha (J.P. Nagar)</fullName>
            </value>
            <value>
                <fullName>Anakapalli</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Anantapuramu</fullName>
            </value>
            <value>
                <fullName>Anantnag</fullName>
            </value>
            <value>
                <fullName>Angul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>