force-app/main/default/objects/Contact/fields/Document_Creation__c.field-meta.xml
<CustomField>
    <fullName>Document_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Creation?</label>
    <type>Checkbox</type>
</CustomField>