force-app/main/default/objects/Contact/fields/Driving_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence_Number__c</fullName>
    <label>Driving Licence Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>