force-app/main/default/objects/Contact/fields/Eligibility_Attendance1__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Attendance1__c</fullName>
    <label>Eligibility Attendance1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>