force-app/main/default/objects/Contact/fields/Eligibility_Attendance2__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Attendance2__c</fullName>
    <label>Eligibility Attendance 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>