force-app/main/default/objects/Contact/fields/Enable_NOC_Request__c.field-meta.xml
<CustomField>
    <fullName>Enable_NOC_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable NOC Request</label>
    <type>Checkbox</type>
</CustomField>