force-app/main/default/objects/Contact/fields/Exam_Approval__c.field-meta.xml
<CustomField>
    <fullName>Exam_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>using for bypass fees and attendance dues for downloading IA hall ticket</description>
    <label>Exam Approval</label>
    <type>Checkbox</type>
</CustomField>