force-app/main/default/objects/Contact/fields/Exam_Date_P__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date_P__c</fullName>
    <formula>ReportsTo.Active_Semester__r.Exam_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Date (P)</label>
    <type>Date</type>
</CustomField>