force-app/main/default/objects/Contact/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centre Based</fullName>
            </value>
            <value>
                <fullName>Internet/Home Based</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Home Based</fullName>
            </value>
            <value>
                <fullName>Mobile Based</fullName>
            </value>
            <value>
                <fullName>Laptop/Desktop with webcam</fullName>
            </value>
            <value>
                <fullName>Offline-CET</fullName>
            </value>
            <value>
                <fullName>Offline - Ph.D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>