force-app/main/default/objects/Contact/fields/Exclude_Late_Fee_Charges_Student__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Late_Fee_Charges_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Late Fee Charges - Student</label>
    <type>Checkbox</type>
</CustomField>