force-app/main/default/objects/Contact/fields/Faculty_ID__c.field-meta.xml
<CustomField>
    <fullName>Faculty_ID__c</fullName>
    <formula>CASESAFEID(School__r.Parent.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faculty ID</label>
    <type>Text</type>
</CustomField>