force-app/main/default/objects/Contact/fields/Father__c.field-meta.xml
<CustomField>
    <fullName>Father__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Father</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Father</relationshipName>
    <type>Lookup</type>
</CustomField>