force-app/main/default/objects/Contact/fields/Father_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Father_Annual_Income__c</fullName>
    <formula>Father__r.Annual_Income__c</formula>
    <label>Father Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>