force-app/main/default/objects/Contact/fields/Father_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Company_Name__c</fullName>
    <formula>Father__r.Company_Name__c</formula>
    <label>Father Company Name</label>
    <type>Text</type>
</CustomField>