force-app/main/default/objects/Contact/fields/Father_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Father_Email_ID__c</fullName>
    <formula>Father__r.Email</formula>
    <label>Father Email ID</label>
    <type>Text</type>
</CustomField>