force-app/main/default/objects/Contact/fields/Father_Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Guardian_Name__c</fullName>
    <label>Father/Guardian Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>