force-app/main/default/objects/Contact/fields/Father_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>Father_Mail_ID__c</fullName>
    <description>Father Mail ID</description>
    <label>Father Mail ID</label>
    <type>Email</type>
</CustomField>