force-app/main/default/objects/Contact/fields/Father_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Mobile_Number__c</fullName>
    <formula>Father__r.MobilePhone</formula>
    <label>Father Mobile Number</label>
    <type>Text</type>
</CustomField>