force-app/main/default/objects/Contact/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <formula>Father__r.FirstName + &apos; &apos; +  Father__r.MiddleName + &apos; &apos; + Father__r.LastName</formula>
    <label>Father Name</label>
    <type>Text</type>
</CustomField>