force-app/main/default/objects/Contact/fields/Father_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_Occupation__c</fullName>
    <formula>TEXT(Father__r.Occupation__c)</formula>
    <label>Father Occupation</label>
    <type>Text</type>
</CustomField>