force-app/main/default/objects/Contact/fields/Father_Occupation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Father_Occupation_Remarks__c</fullName>
    <formula>Father__r.Occupation_Remarks__c</formula>
    <label>Father Occupation Remarks</label>
    <type>Text</type>
</CustomField>