force-app/main/default/objects/Contact/fields/Father_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Office_Number__c</fullName>
    <formula>Father__r.Office_No__c</formula>
    <label>Father Office Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>