force-app/main/default/objects/Contact/fields/Fee_Paid_at_KEA__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid_at_KEA__c</fullName>
    <label>Fee Paid at KEA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>