force-app/main/default/objects/Contact/fields/File_Caste_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Caste_Certificate__c</fullName>
    <label>File Caste Certificate</label>
    <type>Url</type>
</CustomField>