force-app/main/default/objects/Contact/fields/File_Copy_of_Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>File_Copy_of_Aadhar_Card__c</fullName>
    <label>File Copy of Aadhar Card</label>
    <type>Url</type>
</CustomField>