force-app/main/default/objects/Contact/fields/File_Copy_of_Hydr_Kar_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Copy_of_Hydr_Kar_Certificate__c</fullName>
    <label>File Copy of Hydr-Kar Certificate</label>
    <type>Url</type>
</CustomField>