force-app/main/default/objects/Contact/fields/File_Defence_Karnataka_Capf_Others__c.field-meta.xml
<CustomField>
    <fullName>File_Defence_Karnataka_Capf_Others__c</fullName>
    <label>File Defence Karnataka Capf Others</label>
    <type>Url</type>
</CustomField>