force-app/main/default/objects/Contact/fields/File_Income_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Income_Certificate__c</fullName>
    <label>File Income Certificate</label>
    <type>Url</type>
</CustomField>