force-app/main/default/objects/Contact/fields/File_Kannada_Medium_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Kannada_Medium_Certificate__c</fullName>
    <label>File Kannada Medium Certificate</label>
    <type>Url</type>
</CustomField>