force-app/main/default/objects/Contact/fields/File_Migration_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Migration_Certificate__c</fullName>
    <label>File Migration Certificate</label>
    <type>Url</type>
</CustomField>