force-app/main/default/objects/Contact/fields/File_Passport_Size_Photo__c.field-meta.xml
<CustomField>
    <fullName>File_Passport_Size_Photo__c</fullName>
    <label>File Passport Size Photo</label>
    <type>Url</type>
</CustomField>