force-app/main/default/objects/Contact/fields/File_Rural_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Rural_Certificate__c</fullName>
    <label>File Rural Certificate</label>
    <type>Url</type>
</CustomField>