force-app/main/default/objects/Contact/fields/File_Study_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Study_Certificate__c</fullName>
    <label>File Study Certificate</label>
    <type>Url</type>
</CustomField>