force-app/main/default/objects/Contact/fields/File_Transfer_Certificate__c.field-meta.xml
<CustomField>
    <fullName>File_Transfer_Certificate__c</fullName>
    <label>File Transfer Certificate</label>
    <type>Url</type>
</CustomField>