force-app/main/default/objects/Contact/fields/Follow_Up_Task_Score_on_Contact__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Score_on_Contact__c</fullName>
    <description>Captures the Score of the Applicant when a task is created by the counselor with the subject as &apos;Follow-Up&apos;</description>
    <inlineHelpText>Applicant score on the Task creation with subject as Follow-Up by a counselor</inlineHelpText>
    <label>Follow Up Task Score on Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>