force-app/main/default/objects/Contact/fields/FRRO_FRO_Reg_Certificate_Valid_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>FRRO_FRO_Reg_Certificate_Valid_Till_Date__c</fullName>
    <label>FRRO/FRO Reg Certificate Valid Till Date</label>
    <type>Date</type>
</CustomField>