force-app/main/default/objects/Contact/fields/FRRO_FRO_Registration_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>FRRO_FRO_Registration_Certificate_Number__c</fullName>
    <label>FRRO/FRO Registration Certificate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>