force-app/main/default/objects/Contact/fields/Govt_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Govt_Application_Fee__c</fullName>
    <label>Govt Application Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>