force-app/main/default/objects/Contact/fields/Guardian_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Mobile__c</fullName>
    <label>Guardian Mobile</label>
    <type>Phone</type>
</CustomField>