force-app/main/default/objects/Contact/fields/HasHostelRequest__c.field-meta.xml
<CustomField>
    <fullName>HasHostelRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Hostel Request</label>
    <type>Checkbox</type>
</CustomField>